--- a/homepage/style.css
+++ b/homepage/style.css
@@ -39,7 +39,7 @@ body{
     font-size: 16px;
 }
 
-.grid-1-container, .grid-2-container, .grid-4-container{
+.grid-1-container{
     display: grid;
     grid-template-columns: auto auto;
     justify-content: center;
@@ -51,7 +51,6 @@ body{
 
 .grid-1-right-panel{
     text-align: end;
-    
 }
 
 .website-title{
@@ -67,14 +66,43 @@ body{
     font-size: 35px;
 }
 
+.grid-2-container{
+    display: grid;
+    grid-template-columns: auto auto;
+    justify-content: center;
+    align-items: center;
+    column-gap: 180px;
+
+    margin-top: 196.47px;
+    margin-bottom: 155.57px;
+}
+
 .grid-2-left-panel{
+    display: inline-block;
     text-align: start;
+}
+
+.about-title{
+    color: #FB69BD;
+    font-weight: 500;
+    font-size: 40px;
+}
+
+.about-body{
+    display: inline-block;
+    color: #E9E9E8;
+    font-weight: 400;
+    font-size: 26px;
+    margin-top: 26px;
+
+    line-height: 35px;
 }
 
 .category-title{
     font-weight: 500;
     font-size: 40px;
     color: #FB69BD;
+    
 }
 
 .grid-3-container{
@@ -89,7 +117,7 @@ body{
     font-weight: 500;
     font-size: 40px;
     color: #0BB4FF;
-
+    margin-top: 50px;
     margin-bottom: 129px;
 }
 
@@ -116,10 +144,42 @@ body{
     font-size: 40px;
 }
 
+.grid-4-container{
+    display: grid;
+    grid-template-columns: auto auto;
+    justify-content: center;
+    align-items: center;
+    column-gap: 210px;
+
+    margin-top: 68.4px;
+}
+
 .grid-4-left-panel{
     text-align: start;
     text-decoration: none;
     font-weight: 400;
+}
+
+.grid-4-left-panel ul{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+.grid-4-left-panel ul li{
+    margin-bottom: 10px;
+    text-align: start;
+}
+
+.grid-4-left-panel ul li a{
+    text-decoration: none;
+    color: #E9E9E8;
+    font-weight: normal;
+    font-size: 26px;
+}
+
+.grid-4-left-panel ul li a span{
+    padding: 20px 16px;
 }
 
 .footer{
